# memorybot

./: README.md  pyproject.toml  report.md
my_crew1/: long_term_memory_storage.db
my_crew1/short_term1/: chroma.sqlite3
src/memorybot/: crew.py  main.py
