[project]
name = "memorybot"
version = "0.1.0"
description = "memorybot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
memorybot = "memorybot.main:run"
run_crew = "memorybot.main:deploy"
train = "memorybot.main:train"
replay = "memorybot.main:replay"
test = "memorybot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
